iniciando main/form

--- a/styles/global.css
+++ b/styles/global.css
@@ -61,6 +61,7 @@ body {
   background-color: var(--shape-bg);
   color: var(--text-body);
   font: var(--body-md);
+  overflow: hidden;
 }
 
 /* utility */
