--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,8 @@ main {
     max-width: 56rem;
 
     & > h2 {
+      color: var(--text-heading);
+      font: var(--heading-md);
       margin-bottom: 4rem;
     }
   }
