--- a/styles/form.css
+++ b/styles/form.css
@@ -31,7 +31,8 @@ label {
 
 input,
 textarea,
-.radio-pair {
+.radio-pair,
+.theme-picker {
   background-color: var(--input-base);
   border: 1px solid var(--input-stroke);
   border-radius: 0.8rem;
@@ -114,4 +115,102 @@ textarea {
       }
     }
   }
+}
+
+/* event-customization */
+.event-customization {
+  input {
+    all: unset;
+    inset: 0;
+    opacity: 0;
+    position: absolute;
+  }
+}
+
+.colors-picker {
+  grid-template-columns: repeat(11, 1fr);
+
+  .colors-wrapper {
+    background-color: var(--shape-button);
+    border-radius: 999px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 4rem;
+    height: 4rem;
+    position: relative;
+
+    & > div {
+      border-radius: 999px;
+      width: 2.8rem;
+      height: 2.8rem;
+      background-color: black;
+    }
+
+    &:has(input:focus),
+    &:has(input:checked),
+    &:hover {
+      border: 2px solid var(--brand-light);
+    }
+
+    #color1 {
+      background-color: var(--brand-light);
+    }
+    #color2 {
+      background-color: var(--navy);
+    }
+    #color3 {
+      background-color: var(--purple);
+    }
+    #color4 {
+      background-color: var(--fuschia);
+    }
+    #color5 {
+      background-color: var(--pink);
+    }
+    #color6 {
+      background-color: var(--danger);
+    }
+    #color7 {
+      background-color: var(--orange);
+    }
+    #color8 {
+      background-color: var(--yellow);
+    }
+    #color9 {
+      background-color: var(--lime);
+    }
+    #color10 {
+      background-color: var(--green);
+    }
+    #color11 {
+      background-color: var(--cyan);
+    }
+  }
+}
+
+.theme-wrapper {
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0.8rem;
+
+  .theme-picker {
+    justify-items: center;
+    padding: 0.4rem;
+    position: relative;
+
+    label {
+      margin-block: 0.8rem 0.4rem;
+    }
+
+    &:has(input:focus),
+    &:has(input:checked),
+    &:hover {
+      border: 2px solid var(--brand-light);
+    }
+  }
+}
+
+.event-details {
+  display: none;
 }
